# AxPrototype

./: Dockerfile.axp  Dockerfile.sentinel  MANIFEST.in  PYPI_PACKAGING.md  analyze_ird.py  app_axp.py  dashboard.py  docker-compose.yml  fault_injection.py  load_roles.py  pyproject.toml  requirements.txt  run_axp.py  score_validator.py  sentinel_api.py  taes_evaluation.py
.github/workflows/: deploy.yml
axp/orchestration/: chain.py  registry.py  role_loader.py
axp/sentinel/: sentinel_app.py  verify_ledger.py
axp/utils/: session_logging.py
axp/validation/: validators.py
config/: directive_breifs.json  role_shapes.json
docs_internal/: context_nuance_genesis.md  initial_roadmap.md
roles/creative/: builder_stable.txt  caller_stable.txt  critic_stable.txt
