[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axprototype"
version = "0.3.0"
description = "AxPrototype - Creative Domain Governance Engine. Self-auditing, directive-aware AI reasoning."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "AxP Team", email = "dev@axprotocol.io" }
]

dependencies = [
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "pynacl>=1.5.0",
    "streamlit>=1.28.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.scripts]
axp = "run_axp:main"
# sentinel = "axp.sentinel.sentinel_app:start" # TODO: Implement proper Sentinel CLI wrapper

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["axp"]
